--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "This is Inline Search Bot by @GreyMatter_Bots",
+    "name": "This is Inline Search Bot by @roiderff",
     "description": "This is Inline Channel Messages Search Bot by @GreyMatter_Bots",
     "keywords": [
         "telegram",
